# Tact-TUI

./: .gitignore  CMakeLists.txt  README.md
data/: default_book.txt
include/: engine.hpp  text_provider.hpp  tui.hpp
src/: engine.cpp  main.cpp  text_provider.cpp  tui.cpp
